Move assert_tool_version out of common

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,9 +8,6 @@
 
 include:
   - project: "gitlab-com/gl-infra/k8s-workloads/common"
-    file: "/ci/version-checks.yml"
-    ref: 'v3.7.7'
-  - project: "gitlab-com/gl-infra/k8s-workloads/common"
     file: "/ci/except-com.yml"
     ref: 'v3.7.7'
   - project: "gitlab-com/gl-infra/k8s-workloads/common"
@@ -225,6 +222,15 @@ stages:
   - non-prod:QA
   - gprd-cny:deploy
   - gprd:deploy
+
+assert_consistent_tool_versions:
+  stage: check
+  image: "${CI_REGISTRY}/gitlab-com/gl-infra/k8s-workloads/common/k8-helm-ci:${CI_IMAGE_VERSION}"
+  script: "/k8s-workloads/assert-tool-versions.sh"
+  except:
+    variables:
+      - $CI_API_V4_URL == "https://ops.gitlab.net/api/v4"
+      - $CI_COMMIT_REF_NAME == 'master'
 
 #########################################
 # Attempts to find an MR on .com and add
