move shellcheck jobs

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,9 +16,6 @@ include:
   - project: "gitlab-com/gl-infra/k8s-workloads/common"
     file: "/ci/cluster-init-before-script.yml"
     ref: 'v3.7.7'
-  - project: "gitlab-com/gl-infra/k8s-workloads/common"
-    file: "/ci/shellcheck.yml"
-    ref: 'v3.7.7'
 
 variables:
   CI_IMAGE_VERSION: 'v3.7.7'
@@ -222,6 +219,42 @@ stages:
   - non-prod:QA
   - gprd-cny:deploy
   - gprd:deploy
+
+#### Check jobs
+
+shellcheck:
+  image:
+    name: nlknguyen/alpine-shellcheck
+    entrypoint: ["/bin/sh", "-c"]
+  stage: check
+  script:
+    - find bin/ -maxdepth 1 -type f | xargs -r shellcheck -e SC1090,SC1091
+  except:
+    variables:
+      - $AUTO_DEPLOY == "true"
+      - $CI_COMMIT_REF_NAME == 'master'
+
+shfmt:
+  image:
+    name: peterdavehello/shfmt:2.6.4
+    entrypoint: ["/bin/sh", "-c"]
+  stage: check
+  script:
+    - find bin/ -maxdepth 1 -type f | xargs -r shfmt -i 2 -ci -l -d
+  except:
+    variables:
+      - $AUTO_DEPLOY == "true"
+      - $CI_COMMIT_REF_NAME == 'master'
+
+tooling:
+  image: "${CI_REGISTRY}/gitlab-com/gl-infra/k8s-workloads/common/k8-helm-ci:latest:${CI_IMAGE_VERSION}"
+  stage: check
+  script:
+    - bin/k-ctl -t
+  except:
+    variables:
+      - $AUTO_DEPLOY == "true"
+      - $CI_COMMIT_REF_NAME == 'master'
 
 assert_consistent_tool_versions:
   stage: check
