Move `values-from-external-sources.yaml.gotmpl` to be generated via `jsonnet`
Part of https://gitlab.com/gitlab-com/gl-infra/delivery/-/issues/1326

This change moves the computation of values from external sources from being managed
by helmfile itself using the `exec` function during helmfile invocation, to having
each environment get a json file generated via `jsonnet` instead.

The pros of this approach

* As the data we fetch from chef is json, and the output helmfile consumes is
json/yaml, `jsonnet` is a far better tool for complex manipulation of json
rather than go templating

* `jsonnet` is far stricter, especially on things like missing keys/values
making it a lot easier to spot discrepencies across environments (it seems
helmfiles templating will happily just give you `null` for the value instead

* We already use `jsonnet` in runbooks and tanka, so this should be relatively
familiar tooling

* By removing the runtime dependency on fetching things from ops.gitlab.net, reducing
the chance a critical deploy job fails due to issues unrelated.

* Makes changes pulled in from chef better reflected in the git history of this repo,
and changes the workflow so we no longer need to trigger jobs using CHEF_CONFIG_UPDATE
as a crutch.

* A lot easier to debug and see what values are being passed to helm/helmfile (our current
mechanism can be hard to debug when trying to see if your value got pulled from chef correctly)

* We can introduce a job in `.gitlab-ci.yml` to fail pipelines if we detect changes from chef
that haven't been added to an MR and/or a main deployment pipeline (with controls to override
if need be)

The cons of this approach

* It arguably might make things a little harder to understand, as you now have to look understand
how the `Makefile` injects values into jsonnet which outputs a file for `helmfile`.

* Similar to above, it now introduces two new tools (make and jsonnet) to the toolchain for this repo
(though we obviously already have these tools

--- a/releases/gitlab/helmfile.yaml
+++ b/releases/gitlab/helmfile.yaml
@@ -52,4 +52,4 @@ releases:
 {{ if eq (exec "../../bin/file-exists" (list (print "values/" .Environment.Name ".yaml.gotmpl"))) "true" }}
       - 'values/{{ .Environment.Name }}.yaml.gotmpl'
 {{ end }}
-      - values/values-from-external-sources.yaml.gotmpl
+      - values/values-from-external-sources.{{ .Environment.Name }}.yaml
