Enable KAS in `gprd`
Part of https://gitlab.com/gitlab-org/gitlab/-/issues/249596

This does a few things

1) Updates the configuration stanza of KAS to specify the workhorse address correctly
due to configuration changes in the chart (note this configuration is completely different
per environment due to their differing setup)

2) Refactors `environments.yaml` and `values.yaml.gotmpl` to push more settings up to defaults

3) Modifies the GKE Ingress backendconfig to lower make the healthcheck more aggressive
to reduce downtime when pods are cycled

4) Hard locks the version of the image used in kas as currently this defaults to `latest`
when using untagged versions of the chart. Issue to improve this in the future https://gitlab.com/gitlab-com/gl-infra/delivery/-/issues/1544

5) Enables a Cloud Armor Security Policy (defined in terraform) on the Loadbalancer, to
allow us to populate the policy with IP blocks in case of abuse/attack. Documentation
at https://gitlab.com/gitlab-com/runbooks/-/blob/master/docs/kubernetes-agent/kubernetes-agent-block-ips.md

--- a/bases/environments.yaml
+++ b/bases/environments.yaml
@@ -22,7 +22,9 @@ environments:
           mailroom:
             enabled: true
           kas:
-            enabled: false
+            enabled: true
+        gitlab_extras:
+          installed: true
       # These services are only installed in the
       # regional cluster, so we disable them for
       # all zonal clusters, regardless of the environment.
@@ -65,12 +67,8 @@ environments:
             enabled: true
           webservice:
             enabled: true
-          kas:
-            enabled: true
         cluster: pre-gitlab-gke
         region: us-east1
-        gitlab_extras:
-          installed: true
         kas:
           managed_cert_name: kas-pre-gitlab-com
           domain: kas.pre.gitlab.com
@@ -86,11 +84,6 @@ environments:
         registry_api_host: "registry.staging.gitlab.com"
         cluster: gstg-gitlab-gke
         region: us-east1
-        gitlab_extras:
-          installed: true
-        gitlab:
-          kas:
-            enabled: true
         kas:
           managed_cert_name: kas-staging-gitlab-com
           domain: kas.staging.gitlab.com
@@ -150,6 +143,10 @@ environments:
             enabled: true
           webservice:
             enabled: true
+          kas:
+            enabled: false
+        gitlab_extras:
+          installed: false
 
   gprd:
     values:
@@ -162,6 +159,9 @@ environments:
         registry_api_host: "registry.gitlab.com"
         cluster: gprd-gitlab-gke
         region: us-east1
+        kas:
+          managed_cert_name: kas-gitlab-com
+          domain: kas.gitlab.com
 
   # Zonal clusters for gprd, these three environments
   # inherit from the gprd environemnt, which is the
