--- a/releases/gitlab-secrets/helmfile.yaml
+++ b/releases/gitlab-secrets/helmfile.yaml
@@ -233,3 +233,11 @@ releases:
           namespace: {{ $namespace }}
         stringData:
           kas_shared_secret: {{ $gkms_omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.gitlab_kas.api_secret_key") | quote }}
+
+      - apiVersion: v1
+        kind: Secret
+        metadata:
+          name: gitlab-pages-api-credential-v1
+          namespace: {{ $namespace }}
+        stringData:
+          shared_secret: {{ $gkms_omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.\"gitlab-pages\".api_secret_key") | quote }}
